[package]
name = "tus_client_extra"
version = "0.1.1" # remember to update html_root_url
authors = ["Jon Grythe Stødle <jonstodle@outlook.com>", "Anuraag Vaidya <anuraag@bysness.com>"]
edition = "2018"
license = "MIT"
description = "A Rust native client library to interact with *tus* enabled endpoints."
keywords = ["tus", "upload", "resumable"]
repository = "https://github.com/Bysness/tus_client_extra"
readme = "README.md"


[dependencies]
base64 = "0.10"
reqwest = {version = "0.9", optional = true}

[dev-dependencies]
tempfile = "3.1.0"
rand = "0.7.0"
